--- a/public/createpage.html
+++ b/public/createpage.html
@@ -16,6 +16,7 @@
 
     <!-- Page styles -->
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="globalutils.js"></script>
 </head>
 
 <body>
@@ -24,8 +25,98 @@
         <h3><a href="login.html">Please log in here</a></h3>
     </div>
 
+    <div class="container logged-in" hidden>
+        <header class="row title-banner">
+            <h1>Create a New Page</h1>
+            <h3><a href="index.html">Back to Home</a></h3>
+        </header>
+
+        <div class="row">
+            <p class="error create-error" id="create-error">&nbsp;</p>
+        </div>
+
+        <main class="row webpage-form">
+            <div class="row">
+                <label for="title">Page Title</label>
+                <input name="title" id="title" type="text">
+                <label class="error title-error" id="title-error">&nbsp;</label>
+            </div>
+
+            <div class="row">
+                <p class="error submit-error" id="submit-error">&nbsp;</p>
+            </div>
+
+            <div class="row">
+                <label>Submit</label>
+                <button id="submit">Create Page</button>
+            </div>
+        </main>
+    </div>
+
     <script>
-        
+        // Display content if logged in
+        if (!document.cookie.includes('simplecmsloggedin')) {
+            // ... this feels cursed returning outside a function
+            return;
+        }
+
+        document.querySelector('.not-logged-in').hidden = true;
+        document.querySelector('.logged-in').hidden = false;
+
+        // Submit button
+        document.getElementById('submit').addEventListener('click', event => {
+            let title = document.getElementById('title').value;
+            let id = parseInt(locateID(document.cookie));
+
+            document.getElementById('title-error').innerHTML = '&nbsp;';
+            document.getElementById('submit-error').innerHTML = '&nbsp;';
+
+            // Error checking
+            if (title.length === 0) {
+                document.getElementById('title-error').innerHTML = 'Please enter a page title.';
+                return;
+            }
+            if (title.length > 50) {
+                document.getElementById('title-error').innerHTML = 'Please enter a shorter title.';
+                return;
+            }
+            if (typeof id !== "number" || parseInt(id) < 0) {
+                document.getElementById('submit-error').innerHTML = 'User ID not found, you may have been logged out. <a href="login.html">Please log in</a>';
+                return;
+            }
+
+            // This is a post request
+            const formData = new FormData();
+            formData.append('name', title);
+            formData.append('owner', id);
+
+            const fetchSettings = {
+                method: "POST",
+                body: formData
+            };
+
+            // Fetching time
+            fetch(`http://localhost/webpage/`, fetchSettings)
+                .then(response => {
+                    return new Promise(resolve => response.json()
+                        .then(json => resolve({
+                            status: response.status,
+                            json,
+                        })
+                    ));
+                })
+                .then(({ status, json }) => {
+                    if (!json.data) {
+                        document.getElementById('submit-error').innerHTML = "Server couldn't process the request";
+                    }
+                    else {
+                        window.location.replace('http://localhost/mypages.html/');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+        });
     </script>
 </body>
 
