--- a/public/mypages.html
+++ b/public/mypages.html
@@ -77,43 +77,6 @@
     </div>
 
     <script>
-        if (!document.cookie.includes('simplecmsloggedin')) {
-            return;
-        }
-
-        // Get user data so we can display username and pages
-        let fetchSettings = {
-            method: 'GET'
-        };
-        let username = '';
-
-        fetch(`http://localhost/user/${locateID(document.cookie)}`, fetchSettings)
-            .then(response => {
-                return new Promise(resolve => response.json()
-                    .then(json => resolve({
-                        status: response.status,
-                        json,
-                    })
-                ));
-            })
-            .then(({ status, json }) => {
-                if (status === 200) {
-                    username = json.data.username;
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        
-        if (!username) {
-            return;
-        }
-
-        // Turn on the page
-        document.getElementById('logged-in').hidden = false;
-        document.getElementsByClassName('not-logged-in')[0].hidden = true;
-        document.getElementById('user-header').innerHTML = `${username}'s Content`;
-
         // Display table function
         const displayTable = ({ status, json }) => {
             document.getElementById('loading-text').hidden = true;
@@ -138,6 +101,7 @@
             document.getElementById('pages-table').innerHTML = table;
         }
 
+
         // Display errors when the server returns no data/500 errors
         const displayError = ({ status, json }) => {
             document.getElementById('loading-text').hidden = false;
@@ -147,7 +111,9 @@
 
         // Search function; separated so we can call it on load + on search button press
         const search = () => {
-            const getParameters = {};
+            const getParameters = {
+                owner: locateID(document.cookie)
+            };
 
             if (document.getElementById('searchname').value.length !== 0) {
                 getParameters.name = document.getElementById('searchname').value;
@@ -167,7 +133,7 @@
             document.getElementById('loading-text').hidden = false;
             document.getElementById('loading-text').innerHTML = "Loading, please wait...";
 
-            fetch(`http://localhost/webpage/${getString}`, fetchSettings)
+            fetch(`${serverAddress}/webpage/${getString}`, fetchSettings)
                 .then(response => {
                     return new Promise(resolve => response.json()
                         .then(json => resolve({
@@ -191,9 +157,45 @@
                 });
         }
 
-        // Search button + search all on load
-        document.getElementById('search').addEventListener('click', search);
-        window.onload = search;
+        // Check for if the user is logged in
+        if (document.cookie.includes('simplecmsloggedin')) {
+            // Get user data so we can display username and pages
+            let fetchSettings = {
+                method: 'GET'
+            };
+            let username = '';
+
+            // Largest fetch block ever invented
+            fetch(`${serverAddress}/user/${locateID(document.cookie)}`, fetchSettings)
+                .then(response => {
+                    return new Promise(resolve => response.json()
+                        .then(json => resolve({
+                            status: response.status,
+                            json,
+                        })
+                    ));
+                })
+                .then(({ status, json }) => {
+                    if (status === 200 || status === 304) {
+                        username = json.data[0].username;
+                    }
+                })
+                .then(() => {
+                    if (typeof username === 'string' && username.length > 0) {
+                        // Turn on the page
+                        document.getElementById('logged-in').hidden = false;
+                        document.getElementsByClassName('not-logged-in')[0].hidden = true;
+                        document.getElementById('user-header').innerHTML = `${username}'s Content`;
+
+                        // Search button + search all on load
+                        document.getElementById('search').addEventListener('click', search);
+                        search();
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+        }
     </script>
 </body>
 
