working on insert + edit

--- a/public/createpage.html
+++ b/public/createpage.html
@@ -63,6 +63,7 @@
             document.getElementById('submit').addEventListener('click', event => {
                 let title = document.getElementById('title').value;
                 let id = parseInt(locateID(document.cookie));
+                //console.log(id);
 
                 document.getElementById('title-error').innerHTML = '&nbsp;';
                 document.getElementById('submit-error').innerHTML = '&nbsp;';
