--- a/public/mypages.html
+++ b/public/mypages.html
@@ -92,7 +92,7 @@
                 for (row of json.data) {
                     table += `<tr>
                         <td>${row.name}</td>
-                        <td>WIP</td>
+                        <td><a hre</td>
                         <td>WIP</td>    
                     </tr>`;
                 }
