--- a/public/search.html
+++ b/public/search.html
@@ -130,7 +130,7 @@
                 getParameters.body = document.getElementById('searchcontent').value;
             }
             if (document.getElementById('searchowner').value.length !== 0) {
-                getParameters.owner = document.getElementById('searchowner').value;
+                getParameters.user = document.getElementById('searchowner').value;
             }
             if (document.getElementById('sort').value.length !== 0) {
                 getParameters.sort = document.getElementById('sort').value;
